# p2llvm

./: .gitignore  .gitmodules  LICENSE  README.md  build.py  build.sh
docs/: 1. Introduction.md  10. Examples.md  2. Memory Layout.md  3. Calling Convention.md  3. Program Execution.md  4. Propeller 2 Standard LIbrary.md  5. C Standard Library.md  6. 64-bit Support.md  7. Floating Point Support.md  Feature Log.md  Future Work.md  Memory Layout.md  Notes and Thoughts.md  Propeller 2 ABI.md  og_wiki.md
docs/original_docs/: 1. Introduction.md  11. LIT Notes.md  12. Function Caching.md  4. Propeller 2 Standard LIbrary.md  6. 64-bit Support.md  7. Floating Point Support.md  8. Debugging.md
examples/10_lvds/: LVDSDriver.cpp  LVDSDriver.h  Makefile  Menlo_font.h  lvds.cpp  palette_gen.py
examples/10_lvds/scripts/fontgen/: Menlo.ttc  fontgen.py
examples/11_ethernet/: Makefile  enc424j600.cpp  enc424j600.h  ethernet.cpp
examples/1_blink/: Makefile  blink.cpp
examples/2_cogs/: Makefile  cogs.cpp
examples/3_serial/: Makefile  serial.cpp
examples/4_math/: Makefile  math.cpp
examples/4_objects/: Blinker.cpp  Blinker.h  Makefile  objects.cpp
examples/6_objects/: Makefile  objects.cpp
libc/: CMakeLists.txt  Makefile  README.md  p2.cmake
libc/drivers/: CMakeLists.txt  FdSerial.c  FdSerial.h  SDDriver.c  SimpleSerial.c  diskio.c  diskio.h  ff.c  ffunicode.c  memory.c  sd_mmc.c  sd_mmc.h  sdmmc.c  sdmmc.h  serialparam.c  terminal.c
libc/include/: compiler.h  dirent.h  driver.h  errno.h  sdcard.h  setjmp.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
libc/include/sys/: driver.h  ff.h  ffconf.h  jmpbuf.h  sdcard.h  syslimits.h  thread.h  types.h  wchar_t.h
libc/math/: CMakeLists.txt  e_fmod.c  e_pow.c  e_powf.c  e_scalbf.c  e_sqrt.c  e_sqrtf.c  math_private.h  s_scalbn.c
libc/misc/: CMakeLists.txt  chdir.c  mkdir.c  mktemp.c  opendir.c  rmdir.c  sbrk.c  thread.c
libc/pthreads/: CMakeLists.txt
libc/stdio/: CMakeLists.txt  default_io.c  fflush.c  fgetc.c  fgets.c  fopen_intern.c  fputs.c  fwrite.c  gets.c  init_io.c  printf.c  sdcard.c  simple_printf.c  snprintf.c  sprintf.c  tmpfile.c  vfprintf.c  vprintf.c  vsnprintf.c  vsprintf.c
libc/stdlib/: CMakeLists.txt  abort.c  abs.c  c++.cpp  calloc.c  cstd_init.c  errno.c  getenv.c  init_cstd.c  malloc.c  malloc.h  realloc.c  signal.c  strtod.c  strtol.c
libc/string/: CMakeLists.txt  memcpy.c  memmove.c  memset.c
libc/time/: CMakeLists.txt  gettimeofday.c  settimeofday.c  sleep.c  strftime.c  usleep.c
libc/wchar/: CMakeLists.txt  mbrtowc_utf.c
libp2/: CMakeLists.txt  Makefile  README.md  p2.cmake  p2.ld  p2_debug.ld  printf.c  propeller2.c  propeller2.h  smartpins.h
libp2++/: CMakeLists.txt
libp2++/include/: smartpins.h
libp2++/lib/: CMakeLists.txt
libp2/include/: Flash.h  debug.h  printf.h  propeller.h  propeller2.h  simplei2c.h  simpletools.h  smartpins.h  streamer.h
libp2/lib/: CMakeLists.txt  Flash.c  crt0.c  cstd_init_dummy.c  p2db.c  p2db_isr.c  printf.c  propeller2.c  simplei2c.c  simpletools.c
libp2/lib/builtins/: CMakeLists.txt  README.txt  adddf3.c  addsf3.c  ashldi3.c  ashrdi3.c  comparedf2.c  comparesf2.c  divdf3.c  divdi3.c  divsf3.c  divsi3.c  extendhfsf2.c  extendsfdf2.c  fixdfdi.c  fixdfsi.c  fixsfdi.c  fixsfsi.c  fixunsdfdi.c  fixunsdfsi.c  fixunssfdi.c  fixunssfsi.c  floatdidf.c  floatdisf.c  floatsidf.c  floatsisf.c  floatundidf.c  floatundisf.c  floatunsidf.c  floatunsisf.c  fp_add_impl.inc  fp_compare_impl.inc  fp_div_impl.inc  fp_extend_impl.inc  fp_fixint_impl.inc  fp_fixuint_impl.inc  fp_mul_impl.inc  fp_trunc_impl.inc  int_div_impl.inc  int_lib.h  (+25 more)
libp2/lib/math/: ashldi3.c  ashrdi3.c  divdi3.c  divsi3.c  lshrdi3.c  moddi3.c  modsi3.c  muldi3.c  negdi2.c  udivdi3.c  udivmoddi4.c  umoddi3.c
libp2/lib/p2db/: CMakeLists.txt  p2db.c  p2db_isr.c
p2_dev_tests/: Makefile  fft_bench.cpp  simplespi.cpp  test1.cpp  test1.ll  test1.s  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test1_fs.s  test2.cpp  test2.ll  test2.s  test20.cpp  test3.cpp  test3.ll  test3.s  test3_fs.s  test4.cpp  test4.ll  test4.s  test5.cpp  test5.ll  test5.s  test5_fs.s  test6.cpp  test6.s  test7.cpp  test8.cpp  test9.cpp
p2db/: Makefile  README.md  p2db.c  p2db.py  p2db_isr.c  reginfo.py  setup.cfg  test  test.c
p2db/p2db/: __main__.py  debug_cmd.py  loggers.py  p2db.py  p2db_server.py  p2info.py  p2tools.py  screen.py  ui.py
test/: CMakeLists.txt  README.md  p2.cmake  t29.s  test.py
test/ref/: t1.yaml  t10.yaml  t100.yaml  t101.yaml  t102.yaml  t103.yaml  t11.yaml  t12.yaml  t13.yaml  t14.yaml  t15.yaml  t18.yaml  t2.yaml  t21.yaml  t22.yaml  t23.yaml  t24.yaml  t26.yaml  t28.yaml  t29.yaml  t3.yaml  t30.yaml  t31.yaml  t32.yaml  t33.yaml  t34.yaml  t35.yaml  t36.yaml  t37.yaml  t39.yaml  t4.yaml  t5.yaml  t6.yaml  t7.yaml  t8.yaml  t9.yaml
test/src/: CMakeLists.txt  t0.cpp  t1.cpp  t10.cpp  t100.cpp  t101.cpp  t102.cpp  t103.cpp  t104.cpp  t105.cpp  t11.cpp  t12.cpp  t13.cpp  t14.cpp  t15.cpp  t16.cpp  t17.cpp  t18.cpp  t19.cpp  t2.cpp  t20.cpp  t21.cpp  t22.cpp  t23.cpp  t24.cpp  t25.cpp  t26.cpp  t28.cpp  t29.cpp  t3.cpp  t30.cpp  t31.cpp  t32.cpp  t33.cpp  t34.cpp  t35.cpp  t36.cpp  t37.cpp  t38.cpp  t39.cpp  (+7 more)
utils/: formats.txt  gen_mc_tests.py  p2_instructions_revB.csv
