[metadata]
name = p2db
version = 0.0.1
author = Nikita Ermoshkin
description = Debugger environment for p2llvm
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6

# [options.packages.find]
# where = p2db

[options.entry_points]
console_scripts =
    p2db = p2db.p2db:main