add_library(stdio OBJECT
    clearerr.c
    feof.c
    ferror.c
    fflush.c 
	fgetc.c
    fputc.c
    fputs.c
    puts.c
    putchar.c
    getchar.c 
	putc.c
    getc.c
    ungetc.c
    gets.c
    fgets.c 
	setvbuf.c
    setbuf.c
    setlinebuf.c
    setbuffer.c 
	fopen.c
    fopen_intern.c
    freopen.c 
	fwrite.c
    fread.c 
    fseek.c
    ftell.c
    fgetpos.c
    fsetpos.c
    rewind.c 
	stringio.c 
	printf.c
    fprintf.c
    vprintf.c
    sprintf.c
    snprintf.c
    vsprintf.c
    vsnprintf.c
    scanf.c
    vscanf.c
    sscanf.c 
    fscanf.c
	simple_printf.c 
	default_io.c
    init_io.c
    remove.c
    fmemopen.c 
    vfprintf.c
    vfscanf.c
)

target_include_directories(stdio PRIVATE ${CMAKE_SOURCE_DIR}/include)