add_executable(t0 t0.cpp)
add_executable(t1 t1.cpp)
add_executable(t2 t2.cpp)
add_executable(t3 t3.cpp)
add_executable(t4 t4.cpp)
add_executable(t5 t5.cpp)
add_executable(t6 t6.cpp)
add_executable(t7 t7.cpp)
add_executable(t8 t8.cpp)
add_executable(t9 t9.cpp)
add_executable(t10 t10.cpp)
add_executable(t11 t11.cpp)
add_executable(t12 t12.cpp)
add_executable(t13 t13.cpp)
add_executable(t14 t14.cpp)
add_executable(t15 t15.cpp)
add_executable(t16 t16.cpp)
add_executable(t17 t17.cpp)
add_executable(t18 t18.cpp)
add_executable(t19 t19.cpp)
add_executable(t20 t20.cpp)
add_executable(t21 t21.cpp)
add_executable(t22 t22.cpp)
add_executable(t23 t23.cpp)
add_executable(t24 t24.cpp)
add_executable(t25 t25.cpp)
add_executable(t26 t26.cpp)
# no test 28
add_executable(t28 t28.cpp)
add_executable(t29 t29.cpp)
add_executable(t30 t30.cpp)
add_executable(t31 t31.cpp)
add_executable(t32 t32.cpp)
add_executable(t33 t33.cpp)
add_executable(t34 t34.cpp)
add_executable(t35 t35.cpp)
add_executable(t36 t36.cpp)
add_executable(t37 t37.cpp)
add_executable(t38 t38.cpp)

add_executable(t100 t100.cpp)
add_executable(t101 t101.cpp)
add_executable(t102 t102.cpp)
add_executable(t103 t103.cpp)